feat: :sparkles: add tickboxes for API key scopes and be able to edit
